<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dg2f_driver</name>
  <version>0.0.1</version>
  <description>Tesollo DG-2F-M ROS2 driver package</description>
  <maintainer email="khc@tesollo.com">hongcheol</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>delto_hardware</depend>
  <depend>dg2f_description</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>effort_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <exec_depend>control_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
